@@ -390,7 +390,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.18.1</version>
         <configuration>
-          <argLine>-Xmx8192m -XX:MaxPermSize=256m</argLine>
+          <argLine>-Xmx16G</argLine>
           <systemPropertyVariables>
              <databaseCSVPath>${basedir}/database/pokec.txt</databaseCSVPath>
            </systemPropertyVariables>
